# Kube-SRE

./: .gitignore  Dockerfile  README.md  app.py  environment.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  run.ps1  security_scan.py  smoke_test_ws.py
server/: app.py  environment.py  models.py
